--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "connect": "^3.4.0",
     "serve-static": "^1.10.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
