simple page routing

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
+    "@polymer/polymer": "^1.2.5-npm-test.2",
     "connect": "^3.4.0",
     "serve-static": "^1.10.2"
   },
